Updating to spring boot 4